--- a/index.html
+++ b/index.html
@@ -5,5 +5,13 @@
  </head>
  <body>
  <h1>Anish Ghana</h1>
+  <section class = "assign">
+  <img src = "images/problem-statement.jpg" />
+   <section class = "assign-det">
+     <h2> Problem Statement: Internet Connectivity </h2>
+   <p>
+    Where the internet is best around campus
+   </p>
+  </section>
  </body>
 </html>
