--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  <body>
  <h1>Anish Ghana</h1>
   <section class = "assign">
-  <img src = "images/problem-statement.jpg" />
+  <img src = "problem-statement.jpg" />
    <section class = "assign-det">
      <h2> Problem Statement: Internet Connectivity </h2>
    <p>
