--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    <p>
     Where the internet is best around campus
    </p>
-   <a href = "file:///C:/Users/anish/Downloads/png2pdf.pdf">Link to PDF of Jam</a>
+   <a href = "file:///C:/Users/anish/Downloads/png2pdf.pdf">Link to Affinity Diagram</a>
   
   </section>
  </body>
