--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    <p>
     Where the internet is best around campus
    </p>
-   <a href = https://github.com/AnishGhana/AnishGhana.github.io/blob/53bc9e36786c7723533ca07fd6497e9f93fd8d2e/jjam.pdf>Link to Affinity Diagram</a>
+   <a href = "https://github.com/AnishGhana/AnishGhana.github.io/blob/53bc9e36786c7723533ca07fd6497e9f93fd8d2e/jjam.pdf" target="_blank">Link to Affinity Diagram</a>
   
   </section>
  </body>
