--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    <p>
     Where the internet is best around campus
    </p>
-   <a href = "jjam.pdf" target="_blank">Link to Affinity Diagram</a>
+   <a href = "jjam.pdf">Link to Affinity Diagram</a>
   
   </section>
  </body>
