--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     Where the internet is best around campus
    </p>
    <a href = "jjam.pdf">Link to Affinity Diagram</a>
-  
+  <p>
+   Our affinity diagram focused on tackling the problem of internet connectivity around campus. We spoke about
+   hardaware, software, accessibility, delegation,and miscellaneous issues. We also included sub-solutions.
+  </p>
   </section>
  </body>
 </html>
