--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
  <head>
  <title>CSCE 190: Anish Ghana</title>
+ <link rel = "stylesheet" href="styles.css" />
  </head>
  <body>
  <h1>Anish Ghana</h1>
@@ -18,6 +19,16 @@
    Our affinity diagram focused on tackling the problem of internet connectivity around campus. We spoke about
    hardaware, software, accessibility, delegation,and miscellaneous issues. We also included sub-solutions.
   </p>
+  </section>
+  <!--Personas assignment-->
+  <section class="assign">
+    <img src="images/my-persona.jpg">
+    <section class="assign-det">
+        <a href="files/all-personas.pdf"><h2>Team Personas:[title]</h2></a>
+        <p>
+            [Persona Text]
+        </p>
+    </section>
   </section>
  </body>
 </html>
