--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
   </section>
   <!--Personas assignment-->
   <section class="assign">
-    <img src="images/my-persona.jpg">
+    <img src="per1.png">
+    <img src="Per2.png">
+    <img src="Per3.png">
     <section class="assign-det">
-        <a href="files/all-personas.pdf"><h2>Team Personas:[title]</h2></a>
+        <a href="all-personas.pdf"><h2>Team Personas:[title]</h2></a>
         <p>
             [Persona Text]
         </p>
