--- a/index.html
+++ b/index.html
@@ -2,23 +2,29 @@
 <html>
  <head>
  <title>CSCE 190: Anish Ghana</title>
- <link rel="stylesheet" href="styles.css" />
+ <link rel = "stylesheet" href="styles.css" />
  </head>
  <body>
  <h1>Anish Ghana</h1>
   <section class = "assign">
   <img src = "problem-statement.jpg" />
-  <img src = "jam.png" />
    <section class = "assign-det">
      <h2> Problem Statement: Internet Connectivity </h2>
-   <p>
-    Where the internet is best around campus
-   </p>
-   <a href = "jjam.pdf">Link to Affinity Diagram</a>
-  <p>
-   Our affinity diagram focused on tackling the problem of internet connectivity around campus. We spoke about
-   hardaware, software, accessibility, delegation,and miscellaneous issues. We also included sub-solutions.
-  </p>
+    <p>
+      Where the internet is best around campus
+    </p>
+  </section>
+  </section>
+  <section class = "assign">
+    <img src="jam.png" />
+<a href="jjam.pdf">Link to Affinity Diagram</a>
+<p>
+  Our affinity diagram focused on tackling the problem of internet connectivity around campus. We spoke about
+  hardaware, software, accessibility, delegation,and miscellaneous issues. We also included sub-solutions.
+</p>
+  </section>
+    
+    </section>
   </section>
   <!--Personas assignment-->
   <section class="assign">
@@ -26,9 +32,15 @@
     <img src="Per2.png">
     <img src="Per3.png">
     <section class="assign-det">
-        <a href="all-personas.pdf"><h2>Team Personas:[title]</h2></a>
+        <a href="all-personas.pdf"><h2>Team Personas:Potential Customers</h2></a>
         <p>
-            [Persona Text]
+          Carl: Looking to make a positive change for the people  
+        </p>
+        <p>
+          John Boyd: A Janitor is Someone who makes a campus a home and keeps it clean.
+        </p>
+        <p>
+          Jonathan Jack: A professor is someone who talks in someone else's sleep.
         </p>
     </section>
   </section>
