--- a/index.html
+++ b/index.html
@@ -44,5 +44,15 @@
         </p>
     </section>
   </section>
+  <!-- Storyboard assignment -->
+ <section class="assign">
+  <img src="myBoard.png" />
+  <section class="assign-det">
+     <a href="all-storyboards.pdf"><h2>Team Storyboards: Potential Uses</h2></a>
+     <p>
+     My scenario was a janitor on break who was wishing his friend a happy birthday on his phone but then the Wi-Fi goes out.
+     </p>
+  </section>
+</section>
  </body>
 </html>
