--- a/index.html
+++ b/index.html
@@ -54,5 +54,16 @@
      </p>
   </section>
 </section>
+
+ <!--Sketching Assignment -->
+  <section class="assign">
+  <img src="firstPic.png" />
+  <section class="assign-det">
+     <a href="AllSketches.pdf"><h2>Team Sketches: Users using our app</h2></a>
+     <p>
+     Our app in action helping others.
+     </p>
+  </section>
+</section>
  </body>
 </html>
