--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
  <!--Sketching Assignment -->
   <section class="assign">
-  <img src="firstPic.png" />
+  <img src="image_2023-11-08_133807387.png" />
   <section class="assign-det">
      <a href="AllSketches.pdf"><h2>Team Sketches: Users using our app</h2></a>
      <p>
