--- a/index.html
+++ b/index.html
@@ -65,5 +65,17 @@
      </p>
   </section>
 </section>
+  
+ <!-- Paper prototype assignment -->
+ <section class="assign">
+ <img src="" />
+ <section class="assign-det">
+ <a href="https://youtu.be/dQw4w9WgXcQ"><h2>Team Paper Prototype: USC Internet Checking App</h2></a>
+ <p>
+ [Insert text describing your team paper prototype]
+ </p>
+ </section>
+ </section>
+  
  </body>
 </html>
