--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
   
  <!-- Paper prototype assignment -->
  <section class="assign">
- <img src="" />
+ <img src="Paper_Prototype.jpg" />
  <section class="assign-det">
- <a href="https://youtu.be/dQw4w9WgXcQ"><h2>Team Paper Prototype: USC Internet Checking App</h2></a>
+ <a href="https://www.youtube.com/shorts/r0yVF3ZVezI"><h2>Team Paper Prototype: USC Internet Checking App</h2></a>
  <p>
- [Insert text describing your team paper prototype]
+ A paper prototype of an app that checks Wi-Fi around USC.
  </p>
  </section>
  </section>
