--- a/index.html
+++ b/index.html
@@ -76,6 +76,16 @@
  </p>
  </section>
  </section>
-  
+
+ <!-- HiFi prototype assignment -->
+ <section class="assign">
+ <img src="HiFi_Picture.png" />
+ <section class="assign-det">
+ <a href="https://youtu.be/a0kDda7Qh7I"><h2>Team HiFI Prototype: Our Improved USC Internet Checking App</h2></a>
+ <p>
+ A HiFI prototype of an app that checks Wi-Fi around USC. We used Mockitt to make the HiFi prototype.
+ </p>
+ </section>
+ </section>
  </body>
 </html>
