--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </section>
   <section class = "assign">
     <img src="jam.png" />
-<a href="jjam.pdf">Link to Affinity Diagram</a>
+<a href="jjam.pdf"><h2>Affinity Diagram</h2></a>
 <p>
   Our affinity diagram focused on tackling the problem of internet connectivity around campus. We spoke about
   hardaware, software, accessibility, delegation,and miscellaneous issues. We also included sub-solutions.
