--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
  <section class="assign">
  <img src="Paper_Prototype.jpg" />
  <section class="assign-det">
- <a href="https://www.youtube.com/shorts/r0yVF3ZVezI"><h2>Team Paper Prototype: USC Internet Checking App</h2></a>
+ <a href="https://youtu.be/1YlfKfzTaS8"><h2>Team Paper Prototype: USC Internet Checking App</h2></a>
  <p>
  A paper prototype of an app that checks Wi-Fi around USC.
  </p>
